# plasmoid_loader

./: CMakeLists.txt  README.txt  test.qml
embed_window_plasmoid/: metadata.desktop
embed_window_plasmoid/contents/config/: main.xml
embed_window_plasmoid/contents/ui/: configGeneral.qml  main.qml
magicitem/: CMakeLists.txt  README.txt  compositor.cpp  compositor.h  embeddedplasmoidloader.cpp  embeddedplasmoidloader.h  embeddedprocessloader.cpp  embeddedprocessloader.h  embeddedwindow.cpp  embeddedwindow.h  embeddedwindowloader.cpp  main.cpp  main.h  proxywindow.cpp  proxywindow.h  qmldir
magicplasmoid/: metadata.desktop
magicplasmoid/contents/ui/: .main.qml.kate-swp  main.qml
plasmoid_loader/: CMakeLists.txt
plasmoid_loader/daemon/: CMakeLists.txt  README.txt  abstractappletfactory.cpp  abstractappletfactory.h  abstractappletwrapper.cpp  abstractappletwrapper.h  main.cpp  org.kde.plasma.Applet.xml  org.kde.plasma.AppletFactory.xml  org.kde.plasma.provider.workspace.service  org.kde.plasma.provider.workspace.service.in  plasma5appletfactory.cpp  plasma5appletfactory.h  plasma5appletloader  plasmawindowedcorona.cpp  plasmawindowedcorona.h  plasmawindowedview.cpp  plasmawindowedview.h
plasmoid_loader/loader_plasmoid/: metadata.desktop
plasmoid_loader/loader_plasmoid/contents/ui/: main.qml
